--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
 
 <body>
     <div class="page">
+        <section class="header">
+            <div class="header__top-rectangle">
+                <h2 class="header__welcome">Welcome to our online shop</h2>
+                <select class="header__lang" name="lang">
+                    <option class="header__lang_select" value="english">English(USD)</option>
+                    <option class="header__lang_select" value="francais">Français(EURO)</option>
+                </select>
+                <ul class="header__login-sign-up">
+                    <li><a class="header__login" href="#">Login</a></li>
+                    <li class="header__login">&nbsp;or&nbsp;</li>
+                    <li><a class="header__sign-up" href="#">Sign-up</a></li>
+                </ul>
 
+            </div>
+            <img class="logo header__logo" src="./image/Logo.svg">
+            <div class="search">
+                <form class="search__form">
+                    <input class="search__input" type="text" placeholder="Search here">
+                    <button class="search__button" type="submit"></button>
+                </form>
+            </div>
+        </section>
     </div>
 </body>
 
