--- a/index.html
+++ b/index.html
@@ -31,6 +31,32 @@
                     <button class="search__button" type="submit"></button>
                 </form>
             </div>
+
+            <ul class="header__menu-user">
+                <li><a class="header__link" href="#"><img class="header__icon" src="./image/shopping_cart_icon.svg"></a>
+                </li>
+                <li><a class="header__link" href="#"><img class="header__icon" src="./image/Notification_icon.svg"></a>
+                </li>
+                <li><a class="header__link" href="#"><img class="header__icon" src="./image/avatar_icon.svg"></a>
+                </li>
+            </ul>
+
+            <div class="menu-all-collect__name">
+                <h2 class="menu-all-collect__name_text">ALL COLLECTIONS</h2>
+            </div>
+            <ul class="menu-all-collect">
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">All</a></li>
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">New Arrivals</a></li>
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Hot Sale</a></li>
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Furniture</a></li>
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Amarature</a></li>
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Tabble</a></li>
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Chair</a></li>
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Sofa</a></li>
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Mirrors</a></li>
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Stools</a></li>
+                <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Benches</a></li>
+            </ul>
         </section>
     </div>
 </body>
