--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
                 </li>
             </ul>
 
+            <div class="header__menu-horizontal">
+                <ul class="header__menu-horizontal_links">
+                    <li><a class="header__menu-horizontal_link" href="#">HOME</a></li>
+                    <li><a class="header__menu-horizontal_link" href="#">SHOP</a></li>
+                    <li><a class="header__menu-horizontal_link" href="#">BLOG</a></li>
+                    <li><a class="header__menu-horizontal_link" href="#">ABOUT</a></li>
+                    <li><a class="header__menu-horizontal_link" href="#">CONTACT US</a></li>
+                </ul>
+            </div>
+
             <div class="menu-all-collect__name">
                 <h2 class="menu-all-collect__name_text">ALL COLLECTIONS</h2>
             </div>
@@ -57,6 +67,16 @@
                 <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Stools</a></li>
                 <li class="menu-all-collect__cell"><a class="menu-all-collect__link" href="#">Benches</a></li>
             </ul>
+
+            <div class="header__banner">
+                <article class="header__banner_article">
+                    <h3 class="header__banner_subtitle">TOP COLLECTIONS 2022</h3>
+                    <h2 class="header__banner_title">We Serve Your
+                        Dream Furniture</h2>
+                    <p class="header__banner_paragraph">Get 50% off all products</p>
+                </article>
+
+            </div>
         </section>
     </div>
 </body>
