--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
                     <h3 class="header__banner_subtitle">TOP COLLECTIONS 2022</h3>
                     <h2 class="header__banner_title">We Serve Your
                         Dream Furniture</h2>
+                    <img class="header__banner_rect" src="./image/line_under_Furniture.svg">
                     <p class="header__banner_paragraph">Get 50% off all products</p>
                 </article>
-
+                <button class="header__banner_button">SHOP NOW</button>
             </div>
         </section>
     </div>
