--- a/index.html
+++ b/index.html
@@ -75,8 +75,27 @@
                         Dream Furniture</h2>
                     <img class="header__banner_rect" src="./image/line_under_Furniture.svg">
                     <p class="header__banner_paragraph">Get 50% off all products</p>
+                    <button class="header__banner_button" type="button">SHOP NOW</button>
                 </article>
-                <button class="header__banner_button">SHOP NOW</button>
+
+                <img class="header__banner_img-chair" src="./image/banner__chair_blue.png" alt="chair blue">
+                <ul class="header__banner_chair-list">
+                    <li class="header__banner_card"><img class="header__banner_card_img"
+                            src="./image/Modernarmchair-1.png">
+                        <h3 class="header__banner_card_price">$120</h3>
+                        <p class="header__banner_card_name">Office Desk Chair</p>
+                    </li>
+                    <li class="header__banner_card"><img class="header__banner_card_img_two"
+                            src="./image/Modernarmchair-2.png">
+                        <h3 class="header__banner_card_price">$180</h3>
+                        <p class="header__banner_card_name">Home Alisa Sofa</p>
+                    </li>
+                    <li class="header__banner_card"><img class="header__banner_card_img_three"
+                            src="./image/Modernarmchair-3.png">
+                        <h3 class="header__banner_card_price">$250</h3>
+                        <p class="header__banner_card_name">Modern Chair</p>
+                    </li>
+                </ul>
             </div>
         </section>
     </div>
