--- a/index.html
+++ b/index.html
@@ -98,6 +98,86 @@
                 </ul>
             </div>
         </section>
+
+        <section class="feature">
+            <ul class="feature__list">
+                <li class="feature__cell"><img class="feature__cell_img" src="./image/free-delivery 1.svg"
+                        alt="free delivery">
+                    <ul class="feature__cell_table">
+                        <li>
+                            <h3 class="feature__cell_title">Free Shipping</h3>
+                        </li>
+                        <li>
+                            <p class="feature__cell_paragraph">Orders over $100</p>
+                        </li>
+                    </ul>
+                </li>
+                <li class="feature__cell"><img class="feature__cell_img" src="./image/Present 1.svg"
+                        alt="free delivery">
+                    <ul class="feature__cell_table">
+                        <li>
+                            <h3 class="feature__cell_title">Smart Gift Card</h3>
+                        </li>
+                        <li>
+                            <p class="feature__cell_paragraph">Buy $1000 to get card</p>
+                        </li>
+                    </ul>
+                </li>
+                <li class="feature__cell"><img class="feature__cell_img" src="./image/wallet 1.svg" alt="free delivery">
+                    <ul class="feature__cell_table">
+                        <li>
+                            <h3 class="feature__cell_title">Quick Payment</h3>
+                        </li>
+                        <li>
+                            <p class="feature__cell_paragraph">100% secure payment</p>
+                        </li>
+                    </ul>
+                </li>
+                <li class="feature__cell"><img class="feature__cell_img" src="./image/support 1.svg"
+                        alt="free delivery">
+                    <ul class="feature__cell_table">
+                        <li>
+                            <h3 class="feature__cell_title">24/7 Support</h3>
+                        </li>
+                        <li>
+                            <p class="feature__cell_paragraph">Quick support</p>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section class="offers">
+            <div class="offers__rect-img-xl">
+                <img class="offers__img-xl" src="./image/offers_img_xl.png">
+                <h3 class="offers__rect-img-xl_title">Modern Furniture Collections</h3>
+                <p class="offers__rect-img-xl_subtitle">Starting from $500</p>
+                <a class="offers__rect-img-xl_link" href="#">Read more &#8594;</a>
+            </div>
+            <ul class="offers__rect-list">
+                <li class="offers__rect-list_cell">
+                    <img class="offers__img-m" src="./image/offers_img_m.png">
+                    <h3 class="offers__rect-img-m_title">Geometric Bookcase</h3>
+                    <p class="offers__rect-img-m_subtitle">Up to 20% discount</p>
+                    <a class="offers__rect-img-m_link" href="#">Read more &#8594;</a>
+                </li>
+                <li class="offers__rect-list_cell_down">
+                    <img class="offers__img-m" src="./image/offers_img_m_down.png">
+                    <h3 class="offers__rect-img-m_title">Geometric Bookcase</h3>
+                    <p class="offers__rect-img-m_subtitle">Up to 20% discount</p>
+                    <a class="offers__rect-img-m_link" href="#">Read more &#8594;</a>
+                </li>
+            </ul>
+        </section>
+
+        <section class="trending">
+            <h2 class="trending__title">TRENDING</h2>
+            <ul class="trending__top-menu">
+                <li class="trending__top-menu_cell"><a class="trending__top-menu_link" href="#">Top Products</a></li>
+                <li class="trending__top-menu_cell">New Arrivals</li>
+                <li></li>
+            </ul>
+        </section>
     </div>
 </body>
 
