--- a/index.html
+++ b/index.html
@@ -173,10 +173,32 @@
         <section class="trending">
             <h2 class="trending__title">TRENDING</h2>
             <ul class="trending__top-menu">
-                <li class="trending__top-menu_cell"><a class="trending__top-menu_link" href="#">Top Products</a></li>
-                <li class="trending__top-menu_cell">New Arrivals</li>
-                <li></li>
+                <li class="trending__top-menu_cell"><a class="trending__top-menu_link_active" href="#">Top Products</a>
+                </li>
+                <li class="trending__top-menu_cell"><a class="trending__top-menu_link" href="#">New Arrivals</a></li>
+                <li class="trending__top-menu_cell"><a class="trending__top-menu_link" href="#">Best Sellers</a></li>
             </ul>
+
+            <div class="trending__cards">
+                <article class="trending__card-item">
+                    <img class="trending__card-item_new" src="./image/trending_card_New.svg" alt="new">
+                    <img class="trending__cards-item_img" src="./image/chair_minimal lcd chair.png" alt="chair">
+                    <p class="trending__cards-item_name">Chair</p>
+                    <h3 class="trending__cards-item_title">Minimal LCD chair</h3>
+                    <ul class="trending__cards-item_prices">
+                        <li class="trending__cards-item_price_active">$180</li>
+                        <li class="trending__cards-item_price">$250</li>
+                    </ul>
+
+                    <ul class="trending__cards-item_stars">
+                        <li class="trending__cards-item_star"></li>
+                        <li class="trending__cards-item_star"></li>
+                        <li class="trending__cards-item_star"></li>
+                        <li class="trending__cards-item_star"></li>
+                        <li class="trending__cards-item_star"></li>
+                    </ul>
+                </article>
+            </div>
         </section>
     </div>
 </body>
