--- a/index.html
+++ b/index.html
@@ -191,11 +191,83 @@
                     </ul>
 
                     <ul class="trending__cards-item_stars">
-                        <li class="trending__cards-item_star"></li>
-                        <li class="trending__cards-item_star"></li>
-                        <li class="trending__cards-item_star"></li>
-                        <li class="trending__cards-item_star"></li>
-                        <li class="trending__cards-item_star"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                    </ul>
+                </article>
+                <article class="trending__card-item">
+                    <img class="trending__card-item_new" src="./image/trending_card_New.svg" alt="new">
+                    <img class="trending__cards-item_img" src="./image/chair_minimal iconic.png" alt="chair">
+                    <p class="trending__cards-item_name">Chair</p>
+                    <h3 class="trending__cards-item_title">Minimal iconic chair</h3>
+                    <ul class="trending__cards-item_prices">
+                        <li class="trending__cards-item_price_active">$120</li>
+                        <li class="trending__cards-item_price">$150</li>
+                    </ul>
+
+                    <ul class="trending__cards-item_stars">
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star_inactive.svg"></li>
+                    </ul>
+                </article>
+                <article class="trending__card-item">
+                    <img class="trending__card-item_new" src="./image/sale.svg" alt="new">
+                    <img class="trending__cards-item_img" src="./image/dining chair.png" alt="chair">
+                    <p class="trending__cards-item_name">Chair</p>
+                    <h3 class="trending__cards-item_title">Dining chairs</h3>
+                    <ul class="trending__cards-item_prices">
+                        <li class="trending__cards-item_price_active">$100</li>
+                        <li class="trending__cards-item_price">$120</li>
+                    </ul>
+
+                    <ul class="trending__cards-item_stars">
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                    </ul>
+                </article>
+                <article class="trending__card-item">
+                    <img class="trending__card-item_new" src="./image/sale.svg" alt="new">
+                    <img class="trending__cards-item_img" src="./image/buskbo armchair.png" alt="chair">
+                    <p class="trending__cards-item_name">Chair</p>
+                    <h3 class="trending__cards-item_title">Buskbo armchair</h3>
+                    <ul class="trending__cards-item_prices">
+                        <li class="trending__cards-item_price_active">$130</li>
+                        <li class="trending__cards-item_price">$150</li>
+                    </ul>
+
+                    <ul class="trending__cards-item_stars">
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star_inactive.svg"></li>
+                    </ul>
+                </article>
+                <article class="trending__card-item">
+                    <img class="trending__card-item_new" src="./image/sale.svg" alt="new">
+                    <img class="trending__cards-item_img" src="./image/modern chairs.png" alt="chair">
+                    <p class="trending__cards-item_name">Chair</p>
+                    <h3 class="trending__cards-item_title">Modern chairs</h3>
+                    <ul class="trending__cards-item_prices">
+                        <li class="trending__cards-item_price_active">$100</li>
+                        <li class="trending__cards-item_price">$120</li>
+                    </ul>
+
+                    <ul class="trending__cards-item_stars">
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
                     </ul>
                 </article>
             </div>
