--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </section>
 
         <section class="trending">
-            <h2 class="trending__title">TRENDING</h2>
+            <h2 class="section__title">TRENDING</h2>
             <ul class="trending__top-menu">
                 <li class="trending__top-menu_cell"><a class="trending__top-menu_link_active" href="#">Top Products</a>
                 </li>
@@ -270,9 +270,116 @@
                         <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
                     </ul>
                 </article>
+                <article class="trending__card-item">
+                    <img class="trending__card-item_new" src="./image/sale.svg" alt="new">
+                    <img class="trending__cards-item_img" src="./image/plastic_dining_chair.png" alt="chair">
+                    <p class="trending__cards-item_name">Chair</p>
+                    <h3 class="trending__cards-item_title">Plastic dining chair</h3>
+                    <ul class="trending__cards-item_prices">
+                        <li class="trending__cards-item_price_active">$130</li>
+                        <li class="trending__cards-item_price">$150</li>
+                    </ul>
+
+                    <ul class="trending__cards-item_stars">
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star_inactive.svg"></li>
+                    </ul>
+                </article>
+                <article class="trending__card-item">
+                    <img class="trending__card-item_new" src="./image/trending_card_New.svg" alt="new">
+                    <img class="trending__cards-item_img" src="./image/mimmal_wood_chair.png" alt="chair">
+                    <p class="trending__cards-item_name">Chair</p>
+                    <h3 class="trending__cards-item_title">Minimal Wood chair</h3>
+                    <ul class="trending__cards-item_prices">
+                        <li class="trending__cards-item_price_active">$70</li>
+                        <li class="trending__cards-item_price">$90</li>
+                    </ul>
+
+                    <ul class="trending__cards-item_stars">
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star_inactive.svg"></li>
+                    </ul>
+                </article>
+                <article class="trending__card-item">
+                    <img class="trending__card-item_new" src="./image/trending_card_New.svg" alt="new">
+                    <img class="trending__cards-item_img" src="./image/elegent_wood_chair.png" alt="chair">
+                    <p class="trending__cards-item_name">Chair</p>
+                    <h3 class="trending__cards-item_title">Elegent wood chair</h3>
+                    <ul class="trending__cards-item_prices">
+                        <li class="trending__cards-item_price_active">$135</li>
+                        <li class="trending__cards-item_price">$155</li>
+                    </ul>
+
+                    <ul class="trending__cards-item_stars">
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                        <li><img class="trending__cards-item_star" src="./image/star.svg"></li>
+                    </ul>
+                </article>
             </div>
         </section>
+
+        <section class="special-offer">
+            <h2 class="section__title">SPECIAL OFFER</h2>
+            <div class="special-offer__card">
+                <img class="special-offer__img" src="./image/special offer_living_room.png"
+                    alt="special offer_living_room">
+                <h3 class="special-offer__title">Living Room Furniture</h3>
+                <p class="special-offer__paragraph">You don't have a chair. Are you ready for growth? Shop with us 40%
+                    discount!</p>
+                <ul class="special-offer__prices">
+                    <li class="special-offer__price_active">$150</li>
+                    <li class="special-offer__price">$250</li>
+                </ul>
+                <a class="special-offer__button" href="#">SHOP NOW</a>
+
+                <p class="special-offer__timer" id="special-offer__timer"></p>
+
+            </div>
+
+
+
+        </section>
     </div>
+    <script>
+        // Set the date we're counting down to
+        var countDownDate = new Date("June 5, 2022 15:37:25").getTime();
+
+        // Update the count down every 1 second
+        var x = setInterval(function () {
+
+            // Get todays date and time
+            var now = new Date().getTime();
+
+            // Find the distance between now an the count down date
+            var distance = countDownDate - now;
+
+            // Time calculations for days, hours, minutes and seconds
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            // Output the result in an element with id="demo"
+            document.getElementById("special-offer__timer").innerHTML = days + " days " + hours + " hrs "
+                + minutes + " min " + seconds + " secs";
+
+            // If the count down is over, write some text 
+            if (distance < 0) {
+                clearInterval(x);
+                document.getElementById("special-offer__timer").innerHTML = "EXPIRED";
+            }
+        }, 1000);
+    </script>
+
 </body>
 
 </html>
