--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Furniking</title>
     <link rel="shortcut icon" href="./image/logo_ico.png" type="image/png">
-    <link rel="stylesheet" href="../pages/index.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 
 <body>
