--- a/index.html
+++ b/index.html
@@ -171,19 +171,24 @@
             </ul>
         </section>
 
-        <section class="trending">
+        <section class="trending" id="trending">
             <h2 class="section__title">TRENDING</h2>
-            <ul class="trending__top-menu">
-                <li class="trending__top-menu_cell"><a class="trending__top-menu_link_active" href="#">Top Products</a>
+            <ul class="top-menu">
+                <li class="top-menu__cell"><a class="top-menu__link_active" href="#">Top Products</a>
                 </li>
-                <li class="trending__top-menu_cell"><a class="trending__top-menu_link" href="#">New Arrivals</a></li>
-                <li class="trending__top-menu_cell"><a class="trending__top-menu_link" href="#">Best Sellers</a></li>
+                <li class="top-menu__cell"><a class="top-menu__link" href="#">New Arrivals</a></li>
+                <li class="top-menu__cell"><a class="top-menu__link" href="#">Best Sellers</a></li>
             </ul>
 
             <div class="trending__cards">
                 <article class="trending__card-item">
                     <img class="trending__card-item_new" src="./image/trending_card_New.svg" alt="new">
                     <img class="trending__cards-item_img" src="./image/chair_minimal lcd chair.png" alt="chair">
+
+                    <a class="cards-item__favorite" href="#trending"><img class="cards-item__fovorite_img"
+                            src="./image/Heart_favorite.svg" alt="favor"></a>
+                    <a class="cards-item__shop-card-icon" href="#trending"><img class="cards-item__shop-card-icon_img"
+                            src="./image/shopping_cart_icon.svg" alt="shop"></a>
                     <p class="trending__cards-item_name">Chair</p>
                     <h3 class="trending__cards-item_title">Minimal LCD chair</h3>
                     <ul class="trending__cards-item_prices">
@@ -202,6 +207,10 @@
                 <article class="trending__card-item">
                     <img class="trending__card-item_new" src="./image/trending_card_New.svg" alt="new">
                     <img class="trending__cards-item_img" src="./image/chair_minimal iconic.png" alt="chair">
+                    <a class="cards-item__favorite" href="#trending"><img class="cards-item__fovorite_img"
+                            src="./image/Heart_favorite.svg" alt="favor"></a>
+                    <a class="cards-item__shop-card-icon" href="#trending"><img class="cards-item__shop-card-icon_img"
+                            src="./image/shopping_cart_icon.svg" alt="shop"></a>
                     <p class="trending__cards-item_name">Chair</p>
                     <h3 class="trending__cards-item_title">Minimal iconic chair</h3>
                     <ul class="trending__cards-item_prices">
@@ -220,6 +229,10 @@
                 <article class="trending__card-item">
                     <img class="trending__card-item_new" src="./image/sale.svg" alt="new">
                     <img class="trending__cards-item_img" src="./image/dining chair.png" alt="chair">
+                    <a class="cards-item__favorite" href="#trending"><img class="cards-item__fovorite_img"
+                            src="./image/Heart_favorite.svg" alt="favor"></a>
+                    <a class="cards-item__shop-card-icon" href="#trending"><img class="cards-item__shop-card-icon_img"
+                            src="./image/shopping_cart_icon.svg" alt="shop"></a>
                     <p class="trending__cards-item_name">Chair</p>
                     <h3 class="trending__cards-item_title">Dining chairs</h3>
                     <ul class="trending__cards-item_prices">
@@ -238,6 +251,10 @@
                 <article class="trending__card-item">
                     <img class="trending__card-item_new" src="./image/sale.svg" alt="new">
                     <img class="trending__cards-item_img" src="./image/buskbo armchair.png" alt="chair">
+                    <a class="cards-item__favorite" href="#trending"><img class="cards-item__fovorite_img"
+                            src="./image/Heart_favorite.svg" alt="favor"></a>
+                    <a class="cards-item__shop-card-icon" href="#trending"><img class="cards-item__shop-card-icon_img"
+                            src="./image/shopping_cart_icon.svg" alt="shop"></a>
                     <p class="trending__cards-item_name">Chair</p>
                     <h3 class="trending__cards-item_title">Buskbo armchair</h3>
                     <ul class="trending__cards-item_prices">
@@ -256,6 +273,10 @@
                 <article class="trending__card-item">
                     <img class="trending__card-item_new" src="./image/sale.svg" alt="new">
                     <img class="trending__cards-item_img" src="./image/modern chairs.png" alt="chair">
+                    <a class="cards-item__favorite" href="#trending"><img class="cards-item__fovorite_img"
+                            src="./image/Heart_favorite.svg" alt="favor"></a>
+                    <a class="cards-item__shop-card-icon" href="#trending"><img class="cards-item__shop-card-icon_img"
+                            src="./image/shopping_cart_icon.svg" alt="shop"></a>
                     <p class="trending__cards-item_name">Chair</p>
                     <h3 class="trending__cards-item_title">Modern chairs</h3>
                     <ul class="trending__cards-item_prices">
@@ -274,6 +295,10 @@
                 <article class="trending__card-item">
                     <img class="trending__card-item_new" src="./image/sale.svg" alt="new">
                     <img class="trending__cards-item_img" src="./image/plastic_dining_chair.png" alt="chair">
+                    <a class="cards-item__favorite" href="#trending"><img class="cards-item__fovorite_img"
+                            src="./image/Heart_favorite.svg" alt="favor"></a>
+                    <a class="cards-item__shop-card-icon" href="#trending"><img class="cards-item__shop-card-icon_img"
+                            src="./image/shopping_cart_icon.svg" alt="shop"></a>
                     <p class="trending__cards-item_name">Chair</p>
                     <h3 class="trending__cards-item_title">Plastic dining chair</h3>
                     <ul class="trending__cards-item_prices">
@@ -292,6 +317,10 @@
                 <article class="trending__card-item">
                     <img class="trending__card-item_new" src="./image/trending_card_New.svg" alt="new">
                     <img class="trending__cards-item_img" src="./image/mimmal_wood_chair.png" alt="chair">
+                    <a class="cards-item__favorite" href="#trending"><img class="cards-item__fovorite_img"
+                            src="./image/Heart_favorite.svg" alt="favor"></a>
+                    <a class="cards-item__shop-card-icon" href="#trending"><img class="cards-item__shop-card-icon_img"
+                            src="./image/shopping_cart_icon.svg" alt="shop"></a>
                     <p class="trending__cards-item_name">Chair</p>
                     <h3 class="trending__cards-item_title">Minimal Wood chair</h3>
                     <ul class="trending__cards-item_prices">
@@ -310,6 +339,10 @@
                 <article class="trending__card-item">
                     <img class="trending__card-item_new" src="./image/trending_card_New.svg" alt="new">
                     <img class="trending__cards-item_img" src="./image/elegent_wood_chair.png" alt="chair">
+                    <a class="cards-item__favorite" href="#trending"><img class="cards-item__fovorite_img"
+                            src="./image/Heart_favorite.svg" alt="favor"></a>
+                    <a class="cards-item__shop-card-icon" href="#trending"><img class="cards-item__shop-card-icon_img"
+                            src="./image/shopping_cart_icon.svg" alt="shop"></a>
                     <p class="trending__cards-item_name">Chair</p>
                     <h3 class="trending__cards-item_title">Elegent wood chair</h3>
                     <ul class="trending__cards-item_prices">
@@ -370,6 +403,15 @@
 
         <section class="our-products">
             <h2 class="section__title">OUR PRODUCTS</h2>
+            <ul class="top-menu">
+                <li class="top-menu__cell"><a class="top-menu__link_active" href="#">All Products</a>
+                </li>
+                <li class="top-menu__cell"><a class="top-menu__link" href="#">Best Sellers</a></li>
+                <li class="top-menu__cell"><a class="top-menu__link" href="#">New Arrivals</a></li>
+                <li class="top-menu__cell"><a class="top-menu__link" href="#">Todays Deals</a></li>
+            </ul>
+
+
         </section>
     </div>
 
