--- a/index.html
+++ b/index.html
@@ -597,7 +597,31 @@
             <div class="cards-big">
                 <article class="card-big__item">
                     <img class="card-big__img" src="./image/guide_buying_minimal_sofa.png" alt="begineer guide">
-                    <img class="card-big__tag" src="./image/Tag_furniture.svg" alt="Tag furniture">
+                    <img class="card-big__tag">
+                    <p class="card-big__date">23 September 2022</p>
+                    <h3 class="card-big__title">Begineer guide buying minimal sofa</h3>
+                    <a class="card-big__link" href="#">Read more</a>
+                </article>
+                <article class="card-big__item">
+                    <img class="card-big__img" src="./image/guide_buying_minimal_sofa.png" alt="begineer guide">
+                    <img class="card-big__tag">
+                    <p class="card-big__date">23 September 2022</p>
+                    <h3 class="card-big__title">Begineer guide buying minimal sofa</h3>
+                    <a class="card-big__link" href="#">Read more</a>
+                </article>
+                <article class="card-big__item">
+                    <img class="card-big__img" src="./image/guide_buying_minimal_sofa.png" alt="begineer guide">
+                    <img class="card-big__tag">
+                    <p class="card-big__date">23 September 2022</p>
+                    <h3 class="card-big__title">Begineer guide buying minimal sofa</h3>
+                    <a class="card-big__link" href="#">Read more</a>
+                </article>
+                <article class="card-big__item">
+                    <img class="card-big__img" src="./image/guide_buying_minimal_sofa.png" alt="begineer guide">
+                    <img class="card-big__tag">
+                    <p class="card-big__date">23 September 2022</p>
+                    <h3 class="card-big__title">Begineer guide buying minimal sofa</h3>
+                    <a class="card-big__link" href="#">Read more</a>
                 </article>
             </div>
         </section>
